--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <p class="reservation__text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food.</p>
                     <p class="reservation__text reservation__text--last">
                     Delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out! Perfect materials and freshly baked food.</p>
-                </div> <!-- /.reservation__content__inner -->
+                </div> 
                 <form class="reservation__form" action="" method="post">
                     <div class="reservation__form__item">
                         <label class="reservation__label" for="u-name">Name</label>
